--- a/Css/index.css
+++ b/Css/index.css
@@ -1,11 +1,17 @@
 body {
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow-x: hidden;
 }
 
 header {
     border: 1px solid black;
     height: 3.5em;
+    width: 98%;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -22,4 +28,51 @@ a{
 
 a:hover {
     transform: scale(1.1);
+}
+
+.container {
+    /* border: 1px solid red; */
+    height: auto;
+    width: 95.5%;
+    display: flex;
+    flex-wrap: wrap;
+    /* justify-content: center; */
+
+}
+
+.recette {
+    background-color: rgb(214, 214, 235);
+    height: auto;
+    width: 15em;
+    padding: 5px;
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    border-radius: 20px;
+}
+
+.info-recette{
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    text-align: start;
+    /* background-color: green; */
+    padding: 0 2px;
+}
+
+.image-recette {
+    width: 200px;
+    height: 200px;
+    overflow: hidden; 
+    position: relative;
+    margin: 0 8%;
+}
+
+.image-recette img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+    display: block; 
 }
