--- a/Css/index.css
+++ b/Css/index.css
@@ -33,6 +33,8 @@ header a:hover {
     transform: scale(1.1);
 }
 
+/* CSS DISPLAY RECETTE***********************************/
+
 .container {
     /* border: 1px solid red; */
     height: auto;
@@ -169,4 +171,40 @@ ul{
 
 .info-shearch-recette p {
     margin-right: 20px !important;
+}
+
+/* CSS AJOUT RECETTE *************************************/
+
+.formulaire {
+    /* background-color: blueviolet; */
+    margin: 25px 0;
+    padding: 10px;
+    width: 90%;
+
+}
+
+.input-recette{
+    /* background-color: red; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.input-ingredients{
+    /* background-color: green; */
+    margin: 10px 0;
+    display: flex;
+    width: 45%;
+    flex-direction: column;
+    align-items: start;
+    margin-left: 29%;
+}
+
+.input-ingredients h3 {
+    margin: 10px 0;
+    align-self: center;
+}
+
+.submit-recette{
+    margin-left: 45%;
 }
